--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@types/jest": "^29.5.14",
     "@types/pg": "^8.11.11",
     "dotenv": "^16.4.7",
+    "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
-    "pg": "^8.13.1",
     "ts-jest": "^29.2.5"
   }
 }
