--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "autoprefixer": "^10.4.20",
+    "google-auth-library": "^9.15.1",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -20,16 +23,20 @@
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.2",
     "@types/testing-library__jest-dom": "^5.14.9",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "express": "^4.21.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.1",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
