--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "autoprefixer": "^10.4.20",
+    "cors": "^2.8.5",
     "google-auth-library": "^9.15.1",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
