--- a/package.json
+++ b/package.json
@@ -12,26 +12,30 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "cors": "^2.8.5",
+    "geist": "^1.3.1",
     "google-auth-library": "^9.15.1",
-    "next": "15.1.6",
+    "next": "^14.1.0",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20",
+    "@types/node": "^20.11.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.2",
     "@types/testing-library__jest-dom": "^5.14.9",
-    "eslint": "^9",
+    "eslint": "^8.56.0",
     "eslint-config-next": "15.1.6",
     "express": "^4.21.2",
     "jest": "^29.7.0",
@@ -39,6 +43,6 @@
     "postcss": "^8.5.1",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
