--- a/backend/package.json
+++ b/backend/package.json
@@ -9,17 +9,24 @@
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:auth": "jest auth.controller.test.ts --verbose",
+    "test:auth:watch": "jest auth.controller.test.ts --watch --verbose"
   },
   "dependencies": {
     "@types/pg": "^8.11.11",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5"
   }
 }
