--- a/package.json
+++ b/package.json
@@ -7,42 +7,30 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@auth/core": "^0.34.2",
-    "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-slot": "^1.1.1",
-    "autoprefixer": "^10.4.20",
-    "cors": "^2.8.5",
-    "geist": "^1.3.1",
-    "google-auth-library": "^9.15.1",
-    "next": "^14.1.0",
-    "next-auth": "^4.24.11",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.11.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/supertest": "^6.0.2",
-    "@types/testing-library__jest-dom": "^5.14.9",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "15.1.6",
-    "express": "^4.21.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.5.1",
-    "supertest": "^7.0.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.3.3"
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
